--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.0",
     "geist": "^1.2.1",
     "next": "latest",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -23,7 +24,8 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "vercel": "^32.3.0"
   },
   "devDependencies": {
     "@types/node": "20.11.5",
