--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "prettier-fix": "prettier --write .",
+    "stripe:login": "stripe login",
+    "stripe:listen": "stripe listen --forward-to=localhost:3000/api/webhooks/stripe"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@stripe/stripe-js": "github:stripe/stripe-js",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@vercel/speed-insights": "^1.0.10",
@@ -21,11 +25,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
+    "stripe": "^14.18.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3",
-    "vercel": "^32.3.0"
+    "uuid": "^9.0.1",
+    "vercel": "^33.5.2"
   },
   "devDependencies": {
     "@types/node": "20.11.5",
