--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
+    "react-merge-refs": "^2.1.1",
     "stripe": "^14.18.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.4.1",
