--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "github:stripe/stripe-js",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@tanstack/react-table": "^8.12.0",
     "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
