working on navbar

--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@stripe/stripe-js": "github:stripe/stripe-js",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@tanstack/react-table": "^8.12.0",
+    "@types/nodemailer": "^6.4.14",
     "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
@@ -27,15 +29,18 @@
     "geist": "^1.2.1",
     "next": "latest",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.11",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-merge-refs": "^2.1.1",
     "stripe": "^14.18.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
+    "toast": "^0.5.4",
     "typescript": "5.3.3",
     "uuid": "^9.0.1",
     "vercel": "^33.5.2"
