--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "babel-plugin-styled-components": "^2.1.4",
     "encoding": "^0.1.13"
   }
 }
