--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/supabase-js": "latest",
     "@tanstack/react-table": "^8.12.0",
     "@types/nodemailer": "^6.4.14",
+    "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
