--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
+    "daisyui": "^4.7.2",
     "geist": "^1.2.1",
     "lucide-react": "^0.344.0",
     "next": "^14.1.1",
