--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "stripe:listen": "stripe listen --forward-to=localhost:3000/api/webhooks/stripe"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mantine/core": "^6.0.21",
+    "@mantine/dates": "^6.0.21",
+    "@mantine/hooks": "^6.0.21",
+    "@mui/icons-material": "^5.15.12",
+    "@mui/material": "^5.15.12",
+    "@mui/x-date-pickers": "^6.19.6",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -22,6 +30,7 @@
     "@stripe/stripe-js": "github:stripe/stripe-js",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@tabler/icons-react": "^2.47.0",
     "@tanstack/react-table": "^8.12.0",
     "@types/nodemailer": "^6.4.14",
     "@vercel/analytics": "^1.2.2",
@@ -31,8 +40,13 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "daisyui": "^4.7.2",
+    "dayjs": "^1.11.10",
     "geist": "^1.2.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.344.0",
+    "mantine-react-table": "^1.3.4",
+    "material-react-table": "^2.12.1",
     "next": "^14.1.1",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.11",
