--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^2.1.1",
     "@mantine/core": "^6.0.21",
     "@mantine/dates": "^6.0.21",
     "@mantine/hooks": "^6.0.21",
+    "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
     "@mui/x-date-pickers": "^6.19.6",
@@ -27,6 +29,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@rewind-ui/core": "^0.19.8",
     "@stripe/stripe-js": "github:stripe/stripe-js",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
@@ -56,6 +59,7 @@
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-merge-refs": "^2.1.1",
+    "react-responsive": "^9.0.2",
     "stripe": "^14.18.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.4.1",
@@ -67,7 +71,7 @@
   },
   "devDependencies": {
     "@types/node": "20.11.5",
-    "@types/react": "18.2.48",
+    "@types/react": "18.2.19",
     "@types/react-dom": "18.2.18",
     "babel-plugin-styled-components": "^2.1.4",
     "encoding": "^0.1.13"
