--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.1.1",
-    "@mantine/core": "^6.0.21",
-    "@mantine/dates": "^6.0.21",
-    "@mantine/hooks": "^6.0.21",
+    "@mantine/core": "^7.6.1",
+    "@mantine/dates": "^7.6.1",
+    "@mantine/hooks": "^7.6.1",
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
@@ -33,7 +33,7 @@
     "@stripe/stripe-js": "github:stripe/stripe-js",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
-    "@tabler/icons-react": "^2.47.0",
+    "@tabler/icons-react": "^3.0.1",
     "@tanstack/react-table": "^8.12.0",
     "@types/nodemailer": "^6.4.14",
     "@vercel/analytics": "^1.2.2",
@@ -48,12 +48,11 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.344.0",
-    "mantine-react-table": "^1.3.4",
+    "mantine-react-table": "^2.0.0-beta.0",
     "material-react-table": "^2.12.1",
     "next": "^14.1.1",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.11",
-    "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
@@ -67,13 +66,16 @@
     "toast": "^0.5.4",
     "typescript": "5.3.3",
     "uuid": "^9.0.1",
-    "vercel": "^33.5.2"
+    "vercel": "^32.3.0"
   },
   "devDependencies": {
     "@types/node": "20.11.5",
     "@types/react": "18.2.19",
     "@types/react-dom": "18.2.18",
     "babel-plugin-styled-components": "^2.1.4",
-    "encoding": "^0.1.13"
+    "encoding": "^0.1.13",
+    "postcss": "^8.4.35",
+    "postcss-preset-mantine": "^1.13.0",
+    "postcss-simple-vars": "^7.0.1"
   }
 }
