--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-pdf/renderer": "^3.4.0",
     "@rewind-ui/core": "^0.19.8",
     "@stripe/stripe-js": "github:stripe/stripe-js",
     "@supabase/ssr": "latest",
@@ -44,6 +45,7 @@
     "cmdk": "^0.2.1",
     "daisyui": "^4.7.2",
     "dayjs": "^1.11.10",
+    "file-saver": "^2.0.5",
     "geist": "^1.2.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
@@ -69,6 +71,7 @@
     "vercel": "^32.3.0"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "20.11.5",
     "@types/react": "18.2.19",
     "@types/react-dom": "18.2.18",
