--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.1.1",
-    "@mantine/core": "^7.6.1",
-    "@mantine/dates": "^7.6.1",
-    "@mantine/hooks": "^7.6.1",
+    "@mantine/core": "^7.7.0",
+    "@mantine/dates": "^7.7.0",
+    "@mantine/hooks": "^7.7.0",
+    "@mantine/modals": "^7.7.0",
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
@@ -34,7 +35,7 @@
     "@stripe/stripe-js": "github:stripe/stripe-js",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
-    "@tabler/icons-react": "^3.0.1",
+    "@tabler/icons-react": "3.1.0",
     "@tanstack/react-table": "^8.12.0",
     "@types/nodemailer": "^6.4.14",
     "@vercel/analytics": "^1.2.2",
@@ -50,7 +51,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.344.0",
-    "mantine-react-table": "^2.0.0-beta.0",
+    "mantine-react-table": "^2.0.0-beta.1",
     "material-react-table": "^2.12.1",
     "next": "^14.1.1",
     "next-themes": "^0.2.1",
